# shortun

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ShortenerInterface.tsx  TechnicalCard.tsx
frontend/src/components/ui/: theme-toggle.tsx
frontend/src/lib/: api.ts
migrations/: 20250101000001_setup.sql
src/: base62.rs  db.rs  error.rs  main.rs  storage.rs
