[package]
name = "shortun"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"                                  
serde = { version = "1", features = ["derive"] } 
async-trait = "0.1"                
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
url = "2.5"
serde_json = "1.0"
dotenvy = "0.15.7"
