[package]
name = "shortun"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] } 
async-trait = "0.1"                
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
url = "2.5"
serde_json = "1.0"
dotenvy = "0.15.7"
tower-http = { version = "0.6.6", features = ["cors"] }
shuttle-runtime = "0.57.0"
shuttle-axum = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["postgres", "sqlx"] }
